  - New filter: CopyFlow Gold for QuarkXPress

  - OpenXML filter: New option to translate slide masters in PowerPoint documents

  - French localisation updated to 2.0 (UI)

----------------------------------------------------------------------
 OmegaT 1.8.1 update 4 Changes
----------------------------------------------------------------------
1.8.1 update 4 vs. 1.8.1 update 3

   0 Enhancement
   1 Bugfix
----------------------------------------------------------------------
1.8.1 update 4

  Bug fixes:

  - Hunspell and OmegaT could crash if a dictionary did not exist for
a project's language

----------------------------------------------------------------------
 OmegaT 1.8.1 update 3 Changes
----------------------------------------------------------------------
1.8.1 update 3 vs. 1.8.1 update 2

   4 Enhancements
   3 Bugfixes
----------------------------------------------------------------------
1.8.1 update 3
 
  Implemented requests:

  - Add keyboard shortcuts in Search dialog
  http://sourceforge.net/support/tracker.php?aid=1811065
  (Effective in English and in French, other translations must be 
   updated. As for all dialogs, dialog shortcuts are not available on a Mac.)

  Other enhancements:

  - New Welsh localisation (UI, readme, instant start)
  - czech localisation updated to 1.8 (UI, readme, instant start, documentation)
  - Hunspell for Mac and Linux-i386 is updated to 1.2.8
  - Hunspell for Windows is updated to 1.2.7

  Bug fixes:

  - Tags are counted as characters in statistics
  http://sourceforge.net/support/tracker.php?aid=1910909 

  - French dictionary cannot be downloaded and installed
  http://sourceforge.net/support/tracker.php?aid=2138846  

  - Linux: Exception on reading omegat/learned_words.txt
  http://sourceforge.net/support/tracker.php?aid=2657589

----------------------------------------------------------------------
 OmegaT 1.8.1 update 2 Changes
----------------------------------------------------------------------